--- a/ios.config.json
+++ b/ios.config.json
@@ -1,5 +1,5 @@
 {
-    "AppName": "WeexApp",
+    "AppName": "start",
     "Version": "0.1",
     "BuildVersion": "0.1.0",
     "AppId": "lewei.li@qq.com",
