--- a/android.config.json
+++ b/android.config.json
@@ -1,6 +1,6 @@
 {
-  "AppName":"WeexApp",
-  "AppId":"com.alibaba.weex",
-  "SplashText":"Hello\nWeex",
+  "AppName":"start",
+  "AppId":"com.demo.start",
+  "SplashText":"Start\nWeex",
   "WeexBundle":"index.js"
 }
